# spatialPython_hse26

./: .gitignore  README.md  myst.yml  pyproject.toml  requirements.txt  requirenments.txt
.github/workflows/: deploy.yml
notebooks/add/: add_0.ipynb  add_1.ipynb  add_2.ipynb  add_3.ipynb  add_4.ipynb
notebooks/add/data/: bdmo_birth_sample.csv
notebooks/data/: cafes_leninsky.gpkg  spb_theaters.csv
notebooks/data/spb_vas/: area.geojson  cafes.geojson  isochrones.geojson  landuse.geojson  metro.geojson
notebooks/module_0/: environment.md
notebooks/module_1/: basics_0.ipynb  basics_1.ipynb  basics_2.ipynb  basics_3.ipynb
notebooks/module_1/data/: temp_Jan1_1997.csv  temp_Jan1_2020.csv
notebooks/module_2/: spData_0.ipynb  spData_1.ipynb  spData_2.ipynb  spData_3.ipynb  spData_4.ipynb
notebooks/module_2/data/: spb_theaters.csv
notebooks/module_2/data/spb_dtp_shp/: spb_dtp.dbf  spb_dtp.shp  spb_dtp.shx
notebooks/module_3/: projections_0.ipynb  projections_1.ipynb  projections_2.ipynb  projections_3.ipynb
notebooks/module_4/: visualizations_0.ipynb  visualizations_1.ipynb  visualizations_2.ipynb
notebooks/module_5/: geoprocessing_0.ipynb  geoprocessing_1.ipynb  geoprocessing_2.ipynb  geoprocessing_3.ipynb  geoprocessing_4.ipynb  geoprocessing_5.ipynb  geoprocessing_6.ipynb
notebooks/module_6/: networkAnalysis_0.ipynb  networkAnalysis_1.ipynb  networkAnalysis_2.ipynb  networkAnalysis_3.ipynb
notebooks/module_7/: map_0.ipynb  map_1.ipynb  map_2.ipynb
notebooks/projects/: project_1.ipynb  project_2.ipynb  project_3.ipynb
