[project]
name = "spatialpython-hse26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter",
    "ipykernel",
    "folium==0.20.0",
    "geopandas==1.1.2",
    "h3pandas==0.2.4",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "mapclassify==2.8.1",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.1.6",
    "matplotlib-scalebar==0.9.0",
    "mystmd>=1.9.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "osmnx==2.0.7",
    "pandas==2.3.3",
    "polyline==2.0.4",
    "rasterio==1.4.4",
    "rasterstats==0.20.0",
    "requests==2.32.5",
    "shapely==2.1.2",
    "proj>=0.2.0",
]
